--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-scripts": "3.1.1",
     "react-weathericons": "^1.0.4",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "webpack-serve": "^3.1.1"
   }
 }
